fix: icons alignment

--- a/src/cui/components/CuiMenuByBarExperiment/components/TabsMenuExperiment/TabsMenu.scss
+++ b/src/cui/components/CuiMenuByBarExperiment/components/TabsMenuExperiment/TabsMenu.scss
@@ -8,7 +8,7 @@
     box-sizing: border-box;
   }
 
-  height: 102px;
+    height: 94px;
   padding: 0;
   position: relative;
   border-bottom: 2px solid $cui-black-color-200;
@@ -120,6 +120,11 @@
         height: 100%;
       }
     }
+                                                                &-img-container {
+                                                                  width: 100%;
+                                                                  justify-content: center;
+                                                                  display: flex;
+                                                                }
   }
 
   &__item:last-child {
